--- a/app/src/main/res/layout/activity_create_review.xml
+++ b/app/src/main/res/layout/activity_create_review.xml
@@ -42,43 +42,51 @@
             android:orientation="vertical"
             android:gravity="center_horizontal|center_vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
+                android:text="Review"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:textStyle="bold"/>
+
             <LinearLayout
                 android:id="@+id/linearlayout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_marginTop="50dp">
+                android:orientation="horizontal">
 
-                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                <ImageView
                     android:id="@+id/btn_star1"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:backgroundTint="#00000000"
                     android:src="@drawable/ic_baseline_star_border_24" />
 
-                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                <ImageView
                     android:id="@+id/btn_star2"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:backgroundTint="#00000000"
                     android:src="@drawable/ic_baseline_star_border_24" />
 
-                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                <ImageView
                     android:id="@+id/btn_star3"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:backgroundTint="#00000000"
                     android:src="@drawable/ic_baseline_star_border_24" />
 
-                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                <ImageView
                     android:id="@+id/btn_star4"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:backgroundTint="#00000000"
                     android:src="@drawable/ic_baseline_star_border_24" />
 
-                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                <ImageView
                     android:id="@+id/btn_star5"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
@@ -92,18 +100,83 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="50dp">
+                android:layout_marginVertical="20dp">
 
                 <Spinner
 
-                    android:id="@+id/spinner_field"
+                    android:id="@+id/spinner_score"
                     android:layout_width="80dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/edge_txtbox"
                     android:spinnerMode="dropdown"
+                    android:textAlignment="center"
+                    android:gravity="center"
                     android:textColor="@color/black" />
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/edge_txtbox">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginVertical="10dp"
+                    android:background="#00000000">
+
+                    <com.example.nailzip.FontAwesomeTextLight
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textSize="20sp"
+                        android:layout_marginLeft="17dp"
+                        android:textColor="@color/maincolor"/>
+
+                    <TextView
+                        android:id="@+id/edt_review"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:textColor="#727272"
+                        android:text="리뷰 내용"
+                        android:enabled="false"
+                        android:textSize="18dp"
+                        android:inputType="text"
+                        android:background="@android:color/transparent">
+                    </TextView>
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/view_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    app:layout_constraintTop_toTopOf="@+id/guideline2"
+                    android:background="#C4C4C4"/>
+
+                <EditText
+                    android:id="@+id/edt_reviewcontent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginHorizontal="25dp"
+                    android:gravity="top|start"
+                    android:hint="내용"
+                    android:textSize="18dp"
+                    android:scrollHorizontally="false"
+                    android:singleLine="false"
+                    android:inputType="textMultiLine"
+                    android:background="@android:color/transparent">
+                </EditText>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
