--- a/app/src/main/res/layout/fragment_info_review.xml
+++ b/app/src/main/res/layout/fragment_info_review.xml
@@ -43,13 +43,13 @@
                     app:layout_constraintTop_toTopOf="@+id/guideline1">
 
                     <TextView
-                        android:id="@+id/tv_shopname"
+                        android:id="@+id/tv_score"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="20dp"
-                        android:text="4.8"
+                        android:text="0.0"
                         android:textColor="@color/black"
                         android:textSize="40dp"
                         android:textStyle="bold" />
@@ -61,11 +61,11 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tv_memoInfo"
+                            android:id="@+id/tv_reviewCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:text="(10)"
+                            android:text="(00)"
                             android:textColor="#727272"
                             android:textSize="15dp" />
 
@@ -75,33 +75,39 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginVertical="15dp">
 
-                        <androidx.constraintlayout.utils.widget.ImageFilterButton
+                        <ImageView
+                            android:id="@+id/btn_star1"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:backgroundTint="#00000000"
                             android:src="@drawable/ic_baseline_star_border_24" />
 
-                        <androidx.constraintlayout.utils.widget.ImageFilterButton
+                        <ImageView
+                            android:id="@+id/btn_star2"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:backgroundTint="#00000000"
                             android:src="@drawable/ic_baseline_star_border_24" />
 
-                        <androidx.constraintlayout.utils.widget.ImageFilterButton
+                        <ImageView
+                            android:id="@+id/btn_star3"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:backgroundTint="#00000000"
                             android:src="@drawable/ic_baseline_star_border_24" />
 
-                        <androidx.constraintlayout.utils.widget.ImageFilterButton
+                        <ImageView
+                            android:id="@+id/btn_star4"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:backgroundTint="#00000000"
                             android:src="@drawable/ic_baseline_star_border_24" />
 
-                        <androidx.constraintlayout.utils.widget.ImageFilterButton
+                        <ImageView
+                            android:id="@+id/btn_star5"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:backgroundTint="#00000000"
@@ -169,7 +175,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_fab"
         android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="75dp"
         app:fabSize="normal"
         android:elevation="6dp"
         android:backgroundTint="@color/maincolor"
