--- a/app/src/main/res/layout/activity_create_review.xml
+++ b/app/src/main/res/layout/activity_create_review.xml
@@ -177,6 +177,19 @@
 
             </LinearLayout>
 
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:id="@+id/btn_complete"
+                android:text="@string/complete"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginHorizontal="55dp"
+                app:cornerRadius="21dp"
+                android:backgroundTint="@color/maincolor"/>
+
+
 
         </LinearLayout>
 
