--- a/app/src/main/res/layout/fragment_info_review.xml
+++ b/app/src/main/res/layout/fragment_info_review.xml
@@ -76,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:layout_marginVertical="15dp">
+                        android:layout_marginBottom="15dp">
 
                         <ImageView
                             android:id="@+id/btn_star1"
