--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_setting"
+                android:text="Setting"
                 android:textSize="30dp"
                 android:textColor="@color/maincolor"
                 android:textStyle="bold"/>
