--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -14,10 +14,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="15dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_marginHorizontal="25dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/review_img_profile"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/ic_chatuser" />
 
         <TextView
             android:id="@+id/txt_nickname"
@@ -32,34 +41,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="right"
             android:orientation="horizontal">
 
-            <androidx.constraintlayout.utils.widget.ImageFilterButton
+            <ImageView
+                android:id="@+id/btn_star1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_baseline_star_border_24"
                 android:backgroundTint="#00000000"/>
 
-            <androidx.constraintlayout.utils.widget.ImageFilterButton
+            <ImageView
+                android:id="@+id/btn_star2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_baseline_star_border_24"
                 android:backgroundTint="#00000000"/>
 
-            <androidx.constraintlayout.utils.widget.ImageFilterButton
+            <ImageView
+                android:id="@+id/btn_star3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_baseline_star_border_24"
                 android:backgroundTint="#00000000"/>
 
-            <androidx.constraintlayout.utils.widget.ImageFilterButton
+            <ImageView
+                android:id="@+id/btn_star4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_baseline_star_border_24"
                 android:backgroundTint="#00000000"/>
 
-            <androidx.constraintlayout.utils.widget.ImageFilterButton
+            <ImageView
+                android:id="@+id/btn_star5"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_baseline_star_border_24"
@@ -72,6 +86,16 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/txt_reviewtime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="5dp"
+        android:text="2022.10.30"
+        android:textSize="10dp"
+        android:textColor="#666666"/>
+
+    <TextView
         android:id="@+id/txt_review"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,7 +103,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="15dp"
         android:text="너무너무 예쁘게 잘해주서요!!"
-        android:textSize="12dp"
+        android:textSize="14dp"
         android:textColor="#666666"/>
 
 
