--- a/app/src/main/res/values/score.xml
+++ b/app/src/main/res/values/score.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="spinnerScore">
+        <item> 점수 </item>
         <item> 5.0 </item>
         <item> 4.5 </item>
         <item> 4.0 </item>
