--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -46,15 +46,15 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.12" />
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchview"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginHorizontal="25dp"
-        android:backgroundTint="#F1F1F1"
-        android:background="@drawable/edge_search"
-        app:searchIcon="@drawable/ic_baseline_search_24"
-        app:layout_constraintTop_toTopOf="@+id/guideline1"/>
+<!--    <androidx.appcompat.widget.SearchView-->
+<!--        android:id="@+id/searchview"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginHorizontal="25dp"-->
+<!--        android:backgroundTint="#F1F1F1"-->
+<!--        android:background="@drawable/edge_search"-->
+<!--        app:searchIcon="@drawable/ic_baseline_search_24"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/guideline1"/>-->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -67,11 +67,10 @@
         android:id="@+id/view_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginHorizontal="25dp"
         android:background="#EBEBEB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_recyclerview"
@@ -83,6 +82,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
