--- a/app/src/main/res/layout/fragment_nail_shop.xml
+++ b/app/src/main/res/layout/fragment_nail_shop.xml
@@ -64,7 +64,18 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.12" />
 
-<!--    <LinearLayout-->
+<!--    <androidx.appcompat.widget.SearchView-->
+<!--        android:id="@+id/searchview"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginHorizontal="25dp"-->
+<!--        android:backgroundTint="#F1F1F1"-->
+<!--        android:background="@drawable/edge_search"-->
+<!--        app:searchIcon="@drawable/ic_baseline_search_24"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/guideline2"/>-->
+
+
+    <!--    <LinearLayout-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
 <!--        android:layout_marginHorizontal="25dp"-->
