--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -63,6 +63,7 @@
         android:id="@+id/view_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginHorizontal="25dp"
         android:background="#EBEBEB"/>
 
 
